--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     .card {
       text-align: center;
       z-index: 2;
+      background: rgba(20, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 20px;
+      border: 1px solid rgba(255, 77, 77, 0.3);
+      box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
     }
 
     .avatar {
@@ -70,12 +75,14 @@
       font-size: 14px;
       opacity: 0.85;
       margin: 12px 0 30px;
+      min-height: 24px;
     }
 
     .links {
       display: flex;
       gap: 18px;
       justify-content: center;
+      margin-bottom: 25px;
     }
 
     .links a {
@@ -143,7 +150,7 @@
     }
 
     .music-btn {
-      margin-top: 18px;
+      margin-top: 10px;
       background: rgba(255,80,80,0.2);
       border: 1px solid #ff4d4d;
       color: #ff4d4d;
@@ -152,6 +159,7 @@
       cursor: pointer;
       border-radius: 8px;
       transition: 0.3s;
+      margin-bottom: 20px;
     }
 
     .music-btn:hover {
@@ -164,6 +172,45 @@
       0% { text-shadow: 2px 2px red, -2px -2px cyan; }
       50% { text-shadow: -2px 0 magenta, 2px 2px red; }
       100% { text-shadow: 2px -2px cyan, -2px 2px red; }
+    }
+
+    /* Counter Styling */
+    #counter {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      margin-top: 25px;
+      padding: 20px;
+      background: rgba(255, 77, 77, 0.1);
+      border-radius: 12px;
+      border: 1px solid rgba(255, 77, 77, 0.3);
+    }
+
+    #counter div {
+      font-size: 14px;
+      text-align: left;
+      padding: 8px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 8px;
+      border-left: 3px solid #ff4d4d;
+    }
+
+    #counter span {
+      font-weight: 600;
+      color: #fff;
+      text-shadow: 0 0 8px #ff4d4d;
+      float: right;
+    }
+
+    /* Pulse animation for counter updates */
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    .counter-update {
+      animation: pulse 0.5s ease;
     }
   </style>
 </head>
@@ -205,6 +252,7 @@
   </div>
 
 <script>
+  // Typewriter effect
   const text = "I don't seek power — I am power!";
   let i = 0;
   function typeEffect() {
@@ -230,30 +278,106 @@
     else music.pause();
   }
 
+  // ===== VISITOR COUNTER FUNCTIONS =====
+  function updateCounter(elementId, value) {
+    const element = document.getElementById(elementId);
+    element.textContent = value;
+    element.classList.add('counter-update');
+    setTimeout(() => {
+      element.classList.remove('counter-update');
+    }, 500);
+  }
+
+  // Check if user was already counted in this session
+  const sessionId = 'visitor_' + Date.now() + '_' + Math.random().toString(36).substr(2, 9);
+  const alreadyCounted = localStorage.getItem('visitorCounted');
+
   // === GLOBAL TOTAL VISITS ===
   fetch('https://api.countapi.xyz/hit/hsmujahidyt/total')
     .then(res => res.json())
-    .then(data => document.getElementById('count').innerText = data.value);
+    .then(data => {
+      updateCounter('count', data.value.toLocaleString());
+    })
+    .catch(err => {
+      console.error('Total count error:', err);
+      document.getElementById('count').textContent = 'Error';
+    });
 
   // === TODAY VISITS ===
   const todayKey = new Date().toISOString().slice(0,10);
-  fetch('https://api.countapi.xyz/hit/hsmujahidyt/' + todayKey)
-    .then(res => res.json())
-    .then(data => document.getElementById('today').innerText = data.value);
+  const todayCountKey = `today_${todayKey}`;
+  
+  // Only count once per day per user
+  if (!localStorage.getItem(todayCountKey)) {
+    fetch('https://api.countapi.xyz/hit/hsmujahidyt/' + todayKey)
+      .then(res => res.json())
+      .then(data => {
+        updateCounter('today', data.value.toLocaleString());
+        localStorage.setItem(todayCountKey, 'counted');
+      })
+      .catch(err => {
+        console.error('Today count error:', err);
+        document.getElementById('today').textContent = 'Error';
+      });
+  } else {
+    // Get today's count without incrementing
+    fetch('https://api.countapi.xyz/get/hsmujahidyt/' + todayKey)
+      .then(res => res.json())
+      .then(data => {
+        updateCounter('today', data.value.toLocaleString());
+      })
+      .catch(err => {
+        console.error('Today get error:', err);
+        document.getElementById('today').textContent = 'Error';
+      });
+  }
 
   // === ONLINE USERS ===
-  fetch('https://api.countapi.xyz/hit/hsmujahidyt/online')
-    .then(res => res.json())
-    .then(data => document.getElementById('online').innerText = data.value);
+  // Only count as online once per session
+  if (!alreadyCounted) {
+    fetch('https://api.countapi.xyz/hit/hsmujahidyt/online')
+      .then(res => res.json())
+      .then(data => {
+        updateCounter('online', data.value.toLocaleString());
+        localStorage.setItem('visitorCounted', sessionId);
+      })
+      .catch(err => {
+        console.error('Online count error:', err);
+        document.getElementById('online').textContent = 'Error';
+      });
 
-  setTimeout(() => {
-    fetch('https://api.countapi.xyz/update/hsmujahidyt/online?amount=-1');
-  }, 30000);
+    // Decrement online count when user leaves
+    window.addEventListener('beforeunload', () => {
+      fetch('https://api.countapi.xyz/update/hsmujahidyt/online?amount=-1');
+    });
+
+    // Also decrement after 30 seconds of inactivity (fallback)
+    setTimeout(() => {
+      fetch('https://api.countapi.xyz/update/hsmujahidyt/online?amount=-1');
+    }, 30000);
+  } else {
+    // Get current online count without incrementing
+    fetch('https://api.countapi.xyz/get/hsmujahidyt/online')
+      .then(res => res.json())
+      .then(data => {
+        updateCounter('online', data.value.toLocaleString());
+      })
+      .catch(err => {
+        console.error('Online get error:', err);
+        document.getElementById('online').textContent = 'Error';
+      });
+  }
 
   // === COUNTRY DETECTION ===
   fetch('https://ipapi.co/json/')
     .then(res => res.json())
-    .then(data => document.getElementById('country').innerText = data.country_name);
+    .then(data => {
+      document.getElementById('country').textContent = data.country_name || 'Unknown';
+    })
+    .catch(err => {
+      console.error('Country detection error:', err);
+      document.getElementById('country').textContent = 'Unknown';
+    });
 
 </script>
 </body>
