--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
    <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8T1VX45PF"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CCQDWPRKPP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-X8T1VX45PF');
+  gtag('config', 'G-CCQDWPRKPP);
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
